// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromotionalButton does not render the left icon when loading 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c0 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  color: #006296;
  height: 64px;
  width: 64px;
}

.c1 {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c1:hover,
.c1[aria-expanded='true'] {
  background-color: transparent;
  border-color: #003B5A;
  color: #003B5A;
}

.c1[aria-disabled='true'] {
  background-color: transparent;
  border-color: #99C0D5;
  color: #99C0D5;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  margin-right: var(--spacing-1x);
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c2 {
  background: transparent;
  border: none;
  line-height: normal;
  padding: 2px var(--spacing-2x);
  position: relative;
  z-index: 0;
}

.c2::before {
  background: linear-gradient( 90deg, #f99d99, #84c6ea );
  border-radius: var(--border-radius-4x);
  content: '';
  inset: 0;
  -webkit-mask: linear-gradient(#fff 0 0) content-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  padding: 1px;
  position: absolute;
  z-index: -1;
}

.c2:hover::before {
  background: linear-gradient( 90deg, #7b1a15, #003a5a );
}

<div>
  <button
    aria-disabled="true"
    class="c0 c1 c2"
    type="button"
  >
    <svg
      class="c3 c4"
      data-testid="loading-indicator"
      height="16"
      viewBox="0 0 200 200"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <radialgradient
        cx=".66"
        cy=".3125"
        fx=".66"
        fy=".3125"
        gradientTransform="scale(1.5)"
        id="a4"
      >
        <stop
          offset="0"
          stop-color="currentColor"
          stop-opacity="0"
        />
        <stop
          offset="0.5"
          stop-color="currentColor"
          stop-opacity="0.3"
        />
        <stop
          offset="1"
          stop-color="currentColor"
        />
      </radialgradient>
      <circle
        cx="100"
        cy="100"
        fill="none"
        r="88"
        stroke="url(#a4)"
        stroke-dasharray="400 400"
        stroke-dashoffset="0"
        stroke-linecap="round"
        stroke-width="24"
        transform-origin="center"
      >
        <animatetransform
          attributeName="transform"
          calcMode="spline"
          dur="1s"
          keySplines="0 0 1 1"
          keyTimes="0;1"
          repeatCount="indefinite"
          type="rotate"
          values="0;360"
        />
      </circle>
      <circle
        cx="100"
        cy="100"
        fill="none"
        opacity=".2"
        r="88"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="24"
        transform-origin="center"
      />
    </svg>
    Loading...
    <svg
      aria-hidden="true"
      class="lucide lucide-external-link c5"
      data-testid="right-icon"
      fill="none"
      focusable="false"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h6v6"
      />
      <path
        d="M10 14 21 3"
      />
      <path
        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
      />
    </svg>
  </button>
</div>
`;

exports[`PromotionalButton renders when not loading 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c0 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: transparent;
  border-color: #003B5A;
  color: #003B5A;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: #99C0D5;
  color: #99C0D5;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  margin-right: var(--spacing-1x);
}

.c1:hover .c4.c4 > g {
  fill: #7b1a15;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c3 {
  background: transparent;
  border: none;
  line-height: normal;
  padding: 2px var(--spacing-2x);
  position: relative;
  z-index: 0;
}

.c3::before {
  background: linear-gradient( 90deg, #cd2c23, #006296 );
  border-radius: var(--border-radius-4x);
  content: '';
  inset: 0;
  -webkit-mask: linear-gradient(#fff 0 0) content-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  padding: 1px;
  position: absolute;
  z-index: -1;
}

.c3:hover::before {
  background: linear-gradient( 90deg, #7b1a15, #003a5a );
}

<div>
  <button
    class="c0 c1 c2 c3"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      data-testid="left-icon"
      focusable="false"
      height="24"
      icon-name="logo-equisoft-ico"
      width="24"
    />
    Some promo
    <svg
      aria-hidden="true"
      class="lucide lucide-external-link c5"
      data-testid="right-icon"
      fill="none"
      focusable="false"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h6v6"
      />
      <path
        d="M10 14 21 3"
      />
      <path
        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
      />
    </svg>
  </button>
</div>
`;
